# emergency-medical-triage

./: .gitignore  HACKATHON.md  PROJECT-SUMMARY.md  README.md  SUBMISSION-CHECKLIST.md  extract_strings.py  pyproject.toml  requirements.txt
agentcore/: README.md
docs/: 3-MINUTE-PITCH-SCRIPT.md  ADDITIONAL-DETAILS-FUTURE-DEVELOPMENT.md  ARCHITECTURE-PROMPT.md  DEPLOY-WEBAPP-MANUAL-TEST.md  DEPLOY.md  E2E-AND-BENCHMARKING.md  FIX-GITHUB-CONTRIBUTORS.md  IMPLEMENTATION-COST-ESTIMATE.md  MVP-DEPLOY-RUNBOOK.md  PROTOTYPE-PERFORMANCE-REPORT.md  README.md  ROADMAP-MODULES.md  ROADMAP-NEXT.md  SECURITY-PUBLIC-VS-PRIVATE.md  TALKING-POINTS.md  WEB-BACKEND-INTEGRATION-PLAN.md  implementation-plan.md  openapi.yaml
frontend/: README.md
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  api_gateway.tf  api_gateway_cors.tf  apk_bucket.tf  bastion.tf  bedrock.tf  cognito.tf  config.tf  gateway_eka.tf  gateway_get_hospitals.tf  gateway_maps.tf  gateway_routing.tf  hospital_matcher.tf  lambda_health.js  nat.tf  outputs.tf  rds.tf  rmp_learning.tf  route.tf  s3.tf  secrets.tf  terraform.tfvars.example  triage.tf  variables.tf  versions.tf  web_hosting.tf
scripts/: build_gateway_get_hospitals_lambda.sh  build_hospital_matcher_lambda.sh  build_rmp_learning_lambda.sh  build_triage_lambda.sh  check_bedrock_models.py  create_cognito_test_user.py  enable_eka_on_runtime.py  enable_gateway_on_hospital_matcher_runtime.py  enable_gateway_on_rmp_quiz_runtime.py  enable_gateway_on_routing_runtime.py  fetch_google_maps_key.py  get_rmp_token.py  load_api_config.py  test_bedrock.py  (+4 more)
(+230 files in other folders)
